--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -9,6 +9,7 @@
     background-size: cover; /* Cover the container */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent tiling */
+    
   }
   
   .login-form {
@@ -18,6 +19,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
+    transition: transform 0.3s ease;
+    animation: slideIn 1s ease-in-out;
   }
   
   .login-form h2 {
@@ -61,4 +64,14 @@
   .login-form a:hover {
     text-decoration: underline;
   }
-  
+  /* Slide-in animation */
+@keyframes slideIn {
+  0% {
+      opacity: 0;
+      transform: translateY(30px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}  
