changing the register

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 /* Navbar.css */
 .navbar {
-    background-color: #333; /* Dark background for the navbar */
+    background-color: #e12b2b; /* Dark background for the navbar */
   }
   .navbar-brand {
     font-size: 1.8rem; /* Larger font size for the brand */
